2000-02-04  Yuuichi Teranishi  <teranisi@gohome.org>

	* timezone.el (timezone-floor): Eliminated.
	(timezone-fix-time-2): Use `floor' instead of `timezone-floor'.

	* poe-18.el (current-time): Fixed leap year count bug.
	(set-time-zone-rule): New function.
	(current-time-zone): Use `set-time-zone-rule'.
	(floor): New function.
	(window-live-p): New function.
	(read-from-minibuffer): Redefined to add `HIST' optional argument.
	(accept-process-output): Redefined to add `TIMEOUT' and
	`TIMEOUT-MSECS' optional arguments.
	(get-buffer-window): Redefined to add `FRAME' optional argument.

	* poe.el (completing-read): Redifined to adjust optional arguments
	for some emacsen.

2000-01-31  Mikio Nakajima  <minakaji@osaka.email.ne.jp>

	* poe-18.el (defalias): Remove its definition as a function and
	define it as an alias for `fset'.
	(auto-fill-function): Declare with defvar-maybe.
	(unread-command-event): Ditto.
	(unread-command-events): Ditto.
	(insert-and-inherit): Defile with defalias.
	(insert-before-markers-and-inherit): Ditto.
	(number-to-string): Ditto.

2000-01-30  Mikio Nakajima  <minakaji@osaka.email.ne.jp>

	* poe-18.el (window-minibuffer-p): New function.

2000-01-30  Tsukamoto Tetsuo  <czkmt@remus.dti.ne.jp>

	* pces-om.el (insert-file-contents-as-coding-system): Ignore BEG,
	END and REPLACE under Emacs 18, or Mule 1.1 or earlier.
	(insert-file-contents-as-binary): Ditto.

2000-01-27  Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>

	* APEL-CFG: Typo.

2000-01-26  Shuhei KOBAYASHI  <shuhei@aqua.ocn.ne.jp>

	* poe-18.el (set-match-data): New alias for `store-match-data'.
	(save-match-data-internal): New variable.
	(save-match-data): New macro; use above.

	(defalias): Docstring sync.
	(put-text-property): Typo.

2000-01-23  Tsukamoto Tetsuo  <czkmt@remus.dti.ne.jp>

	* poe-18.el (byte-code-function-p): Check if the CDR of OBJECT is
	a cons cell.


2000-01-21  Yuuichi Teranishi  <teranisi@gohome.org>

	* APEL: Version 10.1 released.
