@@ -1,3 +1,9 @@
+2000-02-04  Katsumi Yamaoka   <yamaoka@jpl.org>
+
+	* poe.el (read-file-name): Replacement for Emacs 19.28 and earlier
+	(except for Emacs 18) or XEmacs 19.13 and earlier, for
+	compatibility.
+
 2000-02-04  Yuuichi Teranishi  <teranisi@gohome.org>
 
 	* timezone.el (timezone-floor): Eliminated.
